client/stylesheets/style.css
html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

/* 
  Allow angular.js to be loaded in body, hiding cloaked elements until 
  templates compile.  The !important is important given that there may be 
  other selectors that are more specific or come later and might alter display.  
 */
[ng\:cloak], [ng-cloak], .ng-cloak {
    display: none !important;
}

/*
 * Primary Layout
 * -------------- */

#main {
    margin: 0 auto 60px;
    background-color: white;
    padding: 120px 40px 0px;
    height: 100%;
    position: relative;
}

/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: -60px auto -60px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
    height: 60px;
}
#footer {
    background-color: #000;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
    #footer {
      margin-left: -20px;
      margin-right: -20px;
      padding-left: 20px;
      padding-right: 20px;
    }
}


/*
 * Navigation
 * ---------- */

.navbar .nav-center {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    margin: 0 auto;
    line-height: 50px;
    display: inline-block;
    max-width: 300px;
    overflow: visible;
}

.navbar .nav-center h1,
.navbar .nav-center h2,
.navbar .nav-center h3,
.navbar .nav-center h4,
.navbar .nav-center h5,
.navbar .nav-center h6 {
    margin: 0;
    line-height: 50px;
}

.navbar-inverse .navbar-text {
    color: #eee;
}


/*
 * Buttons
 * ------- */

.btn .glyphicon, .glyphicon.glyphicon-menu, a .glyphicon { margin: 0 4px; }
 
.btn.btn-icon .glyphicon { margin-right: 0; }

/*
 * Signin / Registration
 * --------------------- */

.form-signin, .form-register {
    max-width: 330px;
    padding: 15px;
    margin: 0 auto;
}

.form-signin label.checkbox { line-height: 1.5; }

#register { margin-top: 16px; }


/*
 * Sortable Lists
 * -------------- */

.sortable-list-container { list-style: none outside none; }


/*
 * Miscellaneous
 * ------------- */

/* Trunate long text with ellipses */
.ellipsis {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
    -o-text-overflow: ellipsis;  // for Opera 9 & 10
}

/*
 * My Quizzes
 * ---------- */

.my-quizzes.container {
    width: 40em;
    margin: 2em auto;
}

.quizzes {
    max-width: 500px;
}

.quizzes .quiz-name {
    display: inline;
}

.quizzes .quiz-actions a {
    margin: 0 4px;

}


/*
 * Take Quiz
 * --------- */

.take-quiz {}

.take-quiz .quiz {}

.quiz .header {
    width: 30em;
    margin: 1em auto;
    border-bottom: 1px dotted #ccc;
    padding-bottom: 1em;
}

.quiz .header .prev,
.quiz .header .current,
.quiz .header .next {
    display: inline-block;
    width: 10em;
}

.quiz .header a.disabled {
    color: #999;
}

.quiz .header a.disabled:hover {
    cursor: default;
    text-decoration: none;
}

.quiz .header .prev { text-align: left; }
.quiz .header .current { text-align: center; font-weight: bold; }
.quiz .header .next { text-align: right; }

.quiz-body-container {
    border: 1px solid #ddd;
    border-radius: 4px;
    margin: 1.5em 0;
}

.quiz .question-container,
.quiz .summary-container {
    max-width: 30em;
    margin: 3em auto 5.5em;
}

.quiz .question {
    margin-bottom: 2em;
    max-width: 30em;
    line-height: 1.6;
}

.submission input {
    display: inline;
    width: 250px;
}

.submission input[readonly] { cursor: default; }

.submission .submit, .submission .next {
    margin: 0 6px;
}

.submission .result-container {
    margin-top: 1em;
}

.submission .result {
    display: inline-block;
    min-width: 330px;
}

.submission .result .incorrect {
    display: block;
    margin-bottom: 0.5em;
}

.submission .result .glyphicon {
    margin-right: 4px;
}

.summary-container {
    margin: 1em 0;
}

.summary-container h3 {
    margin: 1em 0;
}

.summary-actions {
    margin: 1.5em 0;
}

.summary-actions button:not(:last-of-type) {
    margin-right: .25em;
}

#quiz-sidebar {
    position: absolute;
    width: 310px;
    top: 21px;
    left: -310px;
}

#quiz-sidebar .question {
    width: 250px;
    max-width: 250px;
    display: inline-block;
    line-height: 1.2;
    margin: 0.3em 0;
}

#quiz-sidebar .status {
    width: 25px;
    overflow: hidden;
    display: inline-block;
    font-size: 1.3em;
}

#quiz-sidebar .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
    background-color: rgba(66, 139, 202, 0.16);
    border-color: #ddd;
    color: black;
}

#quiz-sidebar .status .correct { color: #468847;}
#quiz-sidebar .status .incorrect { color: #b94a48; }

#quiz-sidebar .progress-container {
    padding: 0;
}

#quiz-sidebar .progress {
    border-radius: 0;
    margin-bottom: 0;
    position: relative;
}

#quiz-sidebar .score-tooltip {
    text-align: left;
}

#quiz-sidebar .summary { font-weight: bold; }

.score {
    font-weight: bold;
    font-size: 1.3em;
    background: hsl(206, 79%, 97%);
    padding: .1em .7em;
    border: 1px solid #949AB3;
    border-radius: 4px;
}

.score-percent {
    margin-left: .5em;
}


/*
 * Edit Quiz
 * --------- */

.edit-quiz {
    width: 50em;
    margin: 1em auto 2em;
}

.edit-quiz .header-container {
    margin-top: 20px;
    margin-bottom: 20px;
}

.edit-quiz .header-container h2 {
    float: left;
    margin: 0;
}

.edit-quiz .question-list-container {
    margin-bottom: 1em;
    padding-right: 2em;
    max-height: 68vh;
    overflow-y: scroll;
    border-bottom: 1px solid #999;
    border-top: 1px solid #999;
}

.edit-quiz .question-list-container .sortable-list-container {
    padding: 0;
}

.edit-quiz .question-container {
    width: 100%;
    margin: 8px 0;
    padding: 1em;
    border: 1px dotted #aaa;
    border-radius: 5px;
    background-color: hsl(230, 32%, 97%);

    font-size: 1.1em;
    font-weight: bold;
    cursor: move;
}

.edit-quiz .sortable-list-placeholder {
    width: 100%;
    margin: 8px 0;    
    border: 1px dashed #ccc;
    border-radius: 5px;
    font-size: 1.1em;
    font-weight: bold;
    cursor: move;
}

.edit-quiz .question-number {
    margin: 0 0 .2em .8em;
}

.question-header { margin-bottom: .5em; }

.save-message {
    color: #aaa;
    font-style: italic;
    margin-right: 1em;
    padding: 4px;
    background-color: white;
}

.save-message.error { color: #b94a48; background-color: #f2dede; }

.save-error {
    margin: 1em 0;
}

